--- a/package.json
+++ b/package.json
@@ -25,6 +25,21 @@
       "react-app/jest"
     ]
   },
+  "rules": {
+    "no-unused-vars": "warn",
+    "jsx-a11y/anchor-is-valid": [
+      "error",
+      {
+        " components": [
+          "App",
+          "MainPageCard"
+        ],
+        "specialLink": [
+          "#!"
+        ]
+      }
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
