Removed Unused imports to facilitate deployment

--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
       "error",
       {
         " components": [
-          "App",
-          "MainPageCard"
+          "/App",
+          "Pages/HomePage"
         ],
         "specialLink": [
           "#!"
